# bsmem

./: BSMEM_licence.doc  CMakeLists.txt  Makefile.simple  README.md
CMakeModules/: FindNFFT.cmake  FindPGPLOT.cmake
src/: .gitignore  CMakeLists.txt  bsmem.c  bsmem.h  bsmemf.f  exchange.h  extract_oifits.c  interface.c  memsys.inc  memsys4.f  oifits.c  random.c  random.h  read_fits.c  vector.f
