cmake_minimum_required(VERSION 2.8) 

FIND_PACKAGE(CFITSIO REQUIRED)
FIND_PACKAGE(FFTW3 REQUIRED)
FIND_PACKAGE(PGPLOT REQUIRED)
FIND_PACKAGE(NFFT REQUIRED)
FIND_PACKAGE(X11 REQUIRED)
# Set includes
INCLUDE_DIRECTORIES(${CFITSIO_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${FFTW3_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PGPLOT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${NFFT_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${X11_INCLUDE_DIRS})

# Enable optimization.
#LIST(APPEND CMAKE_Fortran_FLAGS "-O5")
LIST(APPEND CMAKE_C_FLAGS "-march=native -O2 -pipe -std=c11")
#LIST(APPEND CMAKE_C_FLAGS "-ggdb -fomit-frame-pointer -pipe")
# Collect the source:
FILE(GLOB SOURCE *.f bsmem.c oifits.c free_fits.c read_fits.c)

add_executable(bsmem ${SOURCE})
SET_TARGET_PROPERTIES(bsmem PROPERTIES LINKER_LANGUAGE C)
target_link_libraries(bsmem ${CFITSIO_LIBRARIES} ${FFTW3_LIBRARIES} ${PGPLOT_LIBRARIES} ${NFFT_LIBRARIES} ${X11_LIBRARIES})


# Set install directory
set_property(TARGET bsmem PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)
INSTALL(TARGETS bsmem DESTINATION bin)

